[gd_scene load_steps=4 format=3 uid="uid://c0el5tf2xs2rd"]

[ext_resource type="Script" uid="uid://bgrtey1hosj1b" path="res://scenes/menus/level_select_menu/level_select_menu.gd" id="1_a0tqu"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/nodes/utilities/capture_focus.gd" id="2_tjb7s"]
[ext_resource type="PackedScene" uid="uid://d1tplx6ad4pta" path="res://scenes/menus/level_select_menu/scene_lister.tscn" id="3_a0tqu"]

[node name="LevelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0tqu")

[node name="Panel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_tjb7s")

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_right = 126.0
offset_bottom = 30.0
grow_horizontal = 2
text = "choose a level"

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -360.0
offset_right = 200.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelButtonsContainer" type="ItemList" parent="Control/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
auto_height = true
item_count = 1
item_0/text = "1 - ExampleLevel"

[node name="ContentContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BoxContainer" type="BoxContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
vertical = true

[node name="MenuButtonsMargin" type="MarginContainer" parent="ContentContainer/BoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 8

[node name="MenuButtons" type="BoxContainer" parent="ContentContainer/BoxContainer/MenuButtonsMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 1
vertical = true
script = ExtResource("2_tjb7s")

[node name="PlayButton" type="Button" parent="ContentContainer/BoxContainer/MenuButtonsMargin/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
disabled = true
text = "Play"

[node name="CloseButton" type="Button" parent="ContentContainer/BoxContainer/MenuButtonsMargin/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="SceneLister" parent="." instance=ExtResource("3_a0tqu")]

[connection signal="item_clicked" from="Control/ScrollContainer/LevelButtonsContainer" to="." method="_on_level_buttons_container_item_clicked"]
[connection signal="pressed" from="ContentContainer/BoxContainer/MenuButtonsMargin/MenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ContentContainer/BoxContainer/MenuButtonsMargin/MenuButtons/CloseButton" to="." method="_on_close_button_pressed"]
